2nd small update. still needs a few things difficult

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Psychic Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -33,7 +33,7 @@
                 </tr>
             </tbody>
         </table>
-        <table id="yourPick" class="table table-bordered table-hover">
+        <table id="letterBox" class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Your Letter Guess</th>
@@ -81,7 +81,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><span id="result_text"></span></td>
+                    <td><span id="resultText"></span></td>
                 </tr>
             </tbody>
         </table>
@@ -95,9 +95,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><span id="result_text"></span></td>
-                    <td><span id="wins_text"></span></td>
-                    <td><span id="losses_text"></span></td>
+                    <td><span id="guessLeftText"></span></td>
+                    <td><span id="winsText"></span></td>
+                    <td><span id="lossesText"></span></td>
                 </tr>
             </tbody>
         </table>
