This is the final submit for class. details have been completed.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,14 @@
         <h2>Guess The Letter I'm Thinking Of!</h2>
     </div>
     <div id="content">
-        <table id="wordBox" class="table table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>My Letter Choice</th>
-                </tr>
-            </thead>
+        <table id="wordBox" class="table table-bordered">
             <tbody>
                 <tr>
                     <td><span id="computerPick"></span></td>
                 </tr>
             </tbody>
         </table>
-        <table id="letterBox" class="table table-bordered table-hover">
+        <table id="letterBox" class="table table-bordered">
             <thead>
                 <tr>
                     <th>Your Letter Guess</th>
@@ -73,10 +68,10 @@
                 </tr>
             </tbody>
         </table>
-        <table id="yourGuess" class="table table-bordered table-hover">
+        <table id="yourGuess" class="table table-bordered">
             <thead>
                 <tr>
-                    <th>Your Pick</th>
+                    <th>Your Picks</th>
                 </tr>
             </thead>
             <tbody>
@@ -85,7 +80,7 @@
                 </tr>
             </tbody>
         </table>
-        <table id="result" class="table table-bordered table-hover">
+        <table id="result" class="table table-bordered">
             <thead>
                 <tr>
                     <th id="guessesLeft" scope="col">Guesses Remaining</th>
